# KaR

./: .gitignore  README.md
chapter1/: CMakeLists.txt  main.c
chapter1/task 1.16/: README.md  solution.c
chapter1/task 1.17/: README.md  solution.c
chapter1/task 1.18/: README.md  solution.c
chapter1/task 1.19/: README.md  solution.c
chapter1/task 1.20/: README.md  solution.c
chapter1/task 1.21/: README.md  solution.c
chapter1/task 1.22/: README.md  solution.c
chapter1/task 1.23/: README.md  solution.c
chapter1/task 1.24/: README.md  solution.c
chapter1/tasks 1.3-1.15/: README.md
chapter2/: CMakeLists.txt
chapter2/task2_1/: README.md  solution.c
chapter2/task2_10/: README.md  solution.c
chapter2/task2_2/: README.md  solution.c
chapter2/task2_3/: README.md  solution.c
chapter2/task2_4/: README.md  solution.c
chapter2/task2_5/: README.md  solution.c
chapter2/task2_6/: README.md  solution.c
chapter2/task2_7/: README.md  solution.c
chapter2/task2_8/: README.md  solution.c
chapter2/task2_9/: README.md  solution.c
chapter3/: CMakeLists.txt
chapter3/task1/: README.md  solution.c
chapter3/task2/: README.md  solution.c
chapter3/task3/: README.md  solution.c
chapter3/task4/: README.md  solution.c
chapter3/task5/: README.md  solution.c
chapter3/task6/: README.md  solution.c
chapter4/: CMakeLists.txt
chapter4/task1/: README.md  solution.c
chapter4/task10/: README.md  solution.c
chapter4/task11/: README.md  solution.c
chapter4/task12/: README.md  solution.c
chapter4/task13/: README.md  solution.c
chapter4/task14/: README.md  solution.c
chapter4/task2/: README.md  solution.c
chapter4/task3/: README.md  solution.c
chapter4/task4/: README.md  solution.c
chapter4/task5/: README.md  solution.c
chapter4/task6/: README.md  solution.c
chapter4/task7/: README.md  solution.c
chapter4/task8/: README.md  solution.c
chapter4/task9/: README.md  solution.c
chapter5/: CMakeLists.txt
chapter5/task1/: README.md  solution.c
chapter5/task10/: README.md  solution.c
chapter5/task11/: README.md  solution.c
chapter5/task12/: README.md  detab_solution.c  entab_solution.c
chapter5/task2/: README.md  solution.c
chapter5/task3/: README.md  solution.c
chapter5/task4/: README.md  solution.c
chapter5/task5/: README.md  solution.c
chapter5/task6/: README.md  solution.c
chapter5/task7/: README.md  solution.c
chapter5/task8/: README.md  solution.c
chapter5/task9/: README.md  solution.c
