cmake_minimum_required(VERSION 3.13)
project(chapter1)
set(CMAKE_C_STANDARD 11)
add_executable(chapter1_first_tasks "tasks 1.3-1.15/solution.c")
add_executable(chapter1_task_1_16 "task 1.16/solution.c")
add_executable(chapter1_task_1_17 "task 1.17/solution.c")
add_executable(chapter1_task_1_18 "task 1.18/solution.c")
add_executable(chapter1_task_1_19 "task 1.19/solution.c")