cmake_minimum_required(VERSION 3.13)
project(chapter2)
set(CMAKE_C_STANDARD 11)
add_executable(chapter2_task_2_1 "task2_1/solution.c")
add_executable(chapter2_task_2_2 "task2_2/solution.c")
add_executable(chapter2_task_2_3 "task2_3/solution.c")
add_executable(chapter2_task_2_4 "task2_4/solution.c")
add_executable(chapter2_task_2_5 "task2_5/solution.c")
add_executable(chapter2_task_2_6 "task2_6/solution.c")
add_executable(chapter2_task_2_7 "task2_7/solution.c")
