cmake_minimum_required(VERSION 3.13)
project(chapter3)
set(CMAKE_C_STANDARD 11)
add_executable(chapter3_task1 "task1/solution.c")
add_executable(chapter3_task2 "task2/solution.c")
add_executable(chapter3_task3 "task3/solution.c")
add_executable(chapter3_task4 "task4/solution.c")
add_executable(chapter3_task5 "task5/solution.c")
