cmake_minimum_required(VERSION 3.13)
project(chapter3)
set(CMAKE_C_STANDARD 11)
add_executable(chapter4_task1 "task1/solution.c")
add_executable(chapter4_task2 "task2/solution.c")
add_executable(chapter4_task3 "task3/solution.c")
add_executable(chapter4_task4 "task4/solution.c")
add_executable(chapter4_task5 "task5/solution.c")
add_executable(chapter4_task6 "task6/solution.c")
add_executable(chapter4_task7 "task7/solution.c")
add_executable(chapter4_task8 "task8/solution.c")
add_executable(chapter4_task9 "task9/solution.c")
add_executable(chapter4_task10 "task10/solution.c")
add_executable(chapter4_task11 "task11/solution.c")
add_executable(chapter4_task12 "task12/solution.c")
add_executable(chapter4_task13 "task13/solution.c")

